styles/bottombar.css
:root {
  --bb-background: #006338;
}

.background {
  background-color: var(--bb-background);
  background-color: #006338;
}

.bottombar {
  background-color: var(--bb-background);
  padding: 21px 21px;
}

.bb-title {
  font-family: "IBM Plex Sans", Sans-Serif;
  padding: 21px 0px;
  color: white;
  text-align: center;
  font-size: 24px;
  background-color: var(--bb-background);
}

.contact-img {
  display: block;
  text-align: center;
  margin-left: 50px;
  margin-right: 50px;
  background-color: var(--bb-background);
}
/*
.column1 {
  background-color: var(--bb-background);
  float: left;
  display: table;
  text-align: right;
  width: 50%;
  color: var(--b-background);
  font-size: 30px;
  margin-left: auto;
  margin-top: 39px;
  margin-right: auto;
  margin-bottom: 21px;
}

.column2 {
  background-color: var(--bb-background);
  float: left;
  display: table;
  text-align: left;
  width: 40%;
  color: var(--b-background);
  font-size: 24px;
  margin-left: 50px;
  margin-top: 39px;
  margin-right: auto;
  margin-bottom: 21px;
}
*/
.column50 {
  background-color: var(--bb-background);
  display: inline-block;
  font-size: 24px;
  color: white;
  text-align: left;
  width: 50%;
  float: left;
  margin: auto;
}

.email {
  display: block;
  text-align: center;
  color: white;
  font-family: "Roboto", sans-serif;
  font-size: 18px;
}

.gmaps {
  display: block;
  text-align: center;
  color: white;
  width: 80%;
  font-family: "Roboto", sans-serif;
  font-size: 19px;
}

